Typo in README fixed

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ PYSPREAD
 **Installation**
 
 
-See INSTALL file for installation and COPYING file for lincense
+See INSTALL file for installation and COPYING file for license
 
 Homepage: http://manns.github.com/pyspread/
 
