French translator added to authors file

--- a/pyspread/authors
+++ b/pyspread/authors
@@ -16,3 +16,4 @@ German:                 Mario Blättermann, Martin Manns, Christian Kirbach
 Nowegian Nynorsk:       Andreas Noteng
 Nowegian Bokmaal:       Andreas Noteng
 Brazilian Portuguese:   Enrico Nicoletto
+French:                 Frédéric Marchal
