--- a/changelog
+++ b/changelog
@@ -3,6 +3,18 @@ Changelog for pyspread
 
 Note: This changelog starts at version 0.2.0
 
+1.0.1
+-----
+
+Jedi 0.9 API change fixed
+French translation added
+Translations updated
+GPG now only accepts the chosen key as valid
+When an unsaveable xlsx file is opened, now a Save As dialog opens
+The default file type can now be adjusted in the .pyspreadrc file
+Undoing a merge operation now correctly restores data from the merged cells
+
+
 1.0
 ---
 
