--- a/changelog
+++ b/changelog
@@ -3,6 +3,13 @@ Changelog for pyspread
 
 Note: This changelog starts at version 0.2.0
 
+1.0.2
+-----
+
+Save function bug fixed
+Accepts now pys files up to v1.0
+
+
 1.0.1
 -----
 
